<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, start!</string>
    <string name="app_name">SkyWriter</string>
<string name="login">Login</string>
<string name="password">Password :</string>
<string name="username">Username :</string>
<string name="Server">Server :</string>
<string name="defaultServer">atresica.nl</string>
<string name="defaultUsername">demo_atresica.nl</string>
<string name="defaultPassword">temppassword</string>
<string name="messages">What happens goes here</string>
<string name="latitudeText">Lat: </string>
<string name="latitudeValue">0.0</string>
<string name="longitudeText">Long: </string>
<string name="longitudeValue">0.0</string>
<string name="altitudeText">Altitude: </string>
<string name="altitudeValue">0.0</string>
<string name="arblipContentText">Enter content here</string>
<string name="arblipContentValue">Nice piece of AR text =)</string>
<string name="addARblipText">Add ARBlip</string>
<string name="openWaveText">Open</string>
<string name="cancelButton">Cancel</string>
<string name="addButton">Add ARBlip</string>
<string name="arView_editBlip">Edit ARBlip</string>
<string name="arView_deleteBlip">Delete ARBlip</string>
<string name="autoSeLocationText">Auto-set the location</string>
<string name="arView_ConfirmBlipPlacement">Confirm Blip</string>
<string name="arView_CancelBlipPlacement">Cancel Blip</string>
<string name="arView_ContinueBlipPlacement">Continue Editing</string>
<string name="createWave">Create New Wave</string>
<string name="setWavePrefsText">Set Wave Preferances</string>

<string name="NoARBlipID">no_id_set</string>
<string name="colourGrey">#030303</string>
<string name="ARBlipID">ARBlipID</string>
<string name="InviteUser">Invite User</string>
<string name="ServerTypeLabel">ServerType</string>
<string name="removeWave">Remove Wave</string>
<string name="CreateNewWave">Create New Wave</string>
<string name="CreateWaveName">Name</string>
<string name="TypeNameHere">TypeNameHere</string>
<string name="WaveCreationFeedback">Please enter wave name and hit confirm</string>
<string name="Visibility">Visibility</string>
<string name="wavename">Wave Name</string>
<string name="ActiveWave">Post To Wave:</string>
<string name="waveid">wave id:</string>
<string name="JoinWave">Join Wave</string>
<string name="JoinExistingWave">Join Existing Wave</string>
<string name="ParticipantManagement">Participant Management</string>
<string name="Finish">Finish</string>
<string name="InviteRecieved">InviteRecieved</string>
<string name="YouHaveRecievedAInviteFrom">You have recieved a invite from:</string>
<string name="Accept">Accept</string>
<string name="DoYouWishToJoin">Do you wish to join this room</string>
<string name="PostTo">PostTo:</string>
<string name="LocationDetails">Blip Location Details</string>
<string name="SetAsBillboard">Always Face Camera</string>
<string name="Baring">Baring</string>
<string name="elevation">Elevation</string>
<string name="roll">Roll</string>
<string name="Speak">Speak</string>
<string name="CreateArrowHere">Create Arrow Here</string>
<string name="createBlipAnywhere">Create Blip Anywhere</string>
<string name="addBlipLocationMarkerSettings">Location Marker Settings</string>


</resources>
