<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLoginPage"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:background="#000">

	<TableLayout
	    android:id="@+id/tableLayout1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" android:layout_gravity="center_vertical|center_horizontal" android:layout_marginTop="40sp">

	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/UsernameBox"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/username" />

	        <EditText
	            android:id="@+id/EditText02"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/defaultUsername" >

	            <requestFocus />
	        </EditText>

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/PasswordLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/password" />

	        <EditText
	            android:id="@+id/PasswordBox"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="textPassword"
	            android:text="@string/defaultPassword" />

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/LoginServerLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Server" />

	        <EditText
	            android:id="@+id/LoginServerDomain"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/defaultServer" />

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/ServerBox"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ServerTypeLabel" />

	        <Spinner
	            android:id="@+id/ServerSelect"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:entries="@array/ServerType" />

	    </TableRow>
	</TableLayout>

	<Button
	    android:id="@+id/LoginButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/login" />

	<TextView
	    android:id="@+id/messages"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/messages" />

</LinearLayout>