<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/WavePage" android:background="#000000">
					
				<LinearLayout
				    android:id="@+id/WaveListBox"
				    android:layout_width="fill_parent"
				    android:layout_height="match_parent"
				    android:layout_gravity="center_horizontal"
				    android:gravity="center_horizontal"
				    android:orientation="vertical"
				    android:scrollbars="none" android:background="#000">

					<LinearLayout
					    android:id="@+id/linearLayout3"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content" >

						<Button
						    android:id="@+id/CreateWaveButton2"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:text="@string/createWave" />

						<Button
						    android:id="@+id/OpenJoinWaveButton"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:text="@string/JoinWave" />

					</LinearLayout>

					<LinearLayout
					    android:id="@+id/linearLayout1"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content">

					    <TextView
					        android:id="@+id/wavenamelabel"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingLeft="9px"
					        android:text="@string/wavename" />

					    <TextView
					        android:id="@+id/visibiitylabel"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:layout_gravity="right"
					        android:layout_weight="1"
					        android:gravity="right"
					        android:paddingRight="9px"
					        android:text="@string/Visibility" />

					    <TextView
					        android:id="@+id/PostToLabel"
					        android:layout_width="wrap_content"
					        android:layout_height="wrap_content"
					        android:paddingLeft="5px"
					        android:text="@string/PostTo"
					        android:textAppearance="?android:attr/textAppearanceSmall" />

					</LinearLayout>

					<FrameLayout
					    android:id="@+id/wavelistframe"
					    android:layout_width="match_parent"
					    android:scrollbars="vertical" android:layout_gravity="fill_vertical" android:layout_height="wrap_content" android:layout_weight="1" android:scrollbarAlwaysDrawVerticalTrack="true">

					</FrameLayout>
										
				</LinearLayout>
	
</FrameLayout>